--- a/src/components/Pages/Homepage/Payment.css
+++ b/src/components/Pages/Homepage/Payment.css
@@ -3,20 +3,31 @@
     width: 100%;
     /* background-color: aqua; */
 }
+.uppay{
+  text-align: center;
+  margin-top: 20px;
+}
 .section{
-    width: 80%;
+    /* width: 80%; */
     height: 900px;
     display: flex;
     /* border: 2px solid red; */
-    /* margin-top: 30px; */
-    margin: auto;
+    margin-top: 30px;
+    /* margin: auto; */
+    justify-content: center;
     /* display: flex; */
     /* margin: 50px 50px; */
     /* padding-top: 50px; */
 }
+.cardpayment{
+  width: 43%;
+  /* background-color: #45a049; */
+}
 .leftp{
     height: 100%;
-    width: 50%;
+    width: 90%;
+    margin: auto;
+    display: block;
     /* background-color: rgb(138, 87, 87); */
 }
 .leftp h2{
@@ -80,6 +91,10 @@
     margin: 7px 0px;
     width: 15px;
 }
+.country{
+  border: 1px solid #DFDFDF;
+}
+
 
 .hh{
     font-size: 15px;
@@ -102,18 +117,27 @@ form {
     /* margin: 0 auto; */
   }
 
+  .fn{
+    width: 50%;
+  }
   #firstName{
-    width: 245px;
-    margin: 1px;
+    /* width: 245px; */
+    /* margin-left: 3px; */
     /* padding-left: 5px; */
+    border: 1px solid #DFDFDF;
+}
+.ln{
+  width: 50%;
 }
 #lastName{
-    width: 245px;
-    margin: 1px;
+    /* width: 245px; */
+    margin-left: 3px;
+    border: 1px solid #DFDFDF;
   }
   
    .dvv{
     margin-bottom: 15px;
+    width: 100%;
   }
   
   label {
@@ -126,7 +150,7 @@ form {
   select {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #DFDFDF;
     border-radius: 4px;
   }
   
@@ -137,9 +161,10 @@ form {
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
+    width: 40%;
     align-items: end;
-    margin-left: 344px;
-    font-size:13px;
+    margin-left: 290px;
+    font-size:17px;
   }
   
   .btnp:hover {
@@ -148,11 +173,11 @@ form {
   
   .rightp{
     height: 500px;
-    width: 50%;
+    width: 33%;
     /* background-color: #45a049; */
   }
   .cont{
-    height: 200px;
+    /* height: 200px; */
     width: 90%;
     /* border: 2px solid     black; */
     display: block;
@@ -160,7 +185,7 @@ form {
     overflow: auto;
 }
 .divpay{
-    height: 100px;
+    height: 105px;
     display: flex;
     margin-bottom: 10px;
     border-bottom: 2px solid rgb(105, 105, 105);
@@ -183,4 +208,72 @@ form {
     text-align: end;
     line-height: 1.6;
     /* background-color: #45a049; */
+  }
+  .emaill{
+    height: 600px;
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    /* background-color: aqua; */
+    justify-content: center;
+    align-items: center;
+  }
+  .height-order{
+    height: 70px;
+    width: 70px;
+  }
+  .emaill h3{
+    font-size: 30px;
+  }
+  .emaill p{
+    /* width: 100%; */
+    height: 50px;
+    font-size: 19px;
+  }
+
+  @media screen and (max-width: 500px) {
+
+    .container{
+      height: 1141px;
+    }
+    .section{
+      flex-direction: column;
+      width: 100%;
+      margin: 0px 0px;
+      height: 1350px;
+    }
+    .cardpayment{
+      width: 100%;
+    }
+    .rightp{
+      padding: 1px 12px;
+      width: 100%;
+    }
+    .ship{
+      height: 600px;
+    }
+    .leftp{
+      width: 100%;
+    }
+    .hhhh{
+      padding: 1px 30px;
+    }
+    .aa input{
+      margin: 0px 30px;
+      width: 85%;
+    }
+    .ip{
+      margin-left: 30px;
+    }
+    form{
+      width: 96%;
+    }
+    .btnp{
+      margin-left: 0px;
+      width: 100%;
+    }
+    .cont{
+      overflow: initial;
+      width: 100%;
+    }
   }
