--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,3 @@
-::-webkit-scrollbar {
-  width: 0;
-}
-
-.MuiMobileStepper-dot {
-  display: none;
-}
-
-.MuiContainer-maxWidthLg {
-  max-width: 100000px;
-}
-
-.MuiCollapse-container {
-  transition-duration: 0s !important;
-}
-
-.MuiExpansionPanelSummary-expandIcon.Mui-expanded {
-  transform: rotate(0deg);
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
