--- a/src/components/Pages/Admin.css
+++ b/src/components/Pages/Admin.css
@@ -3,6 +3,21 @@
     width: 100%;
     /* background-color: aqua; */
 }
+
+.line-preview{
+    width: 80%;
+    /* height: 100px; */
+    display: flex;
+    padding-top: 20px;
+    margin-left: 30px;
+    margin-right: 10px;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    /* background-color: aqua; */
+    overflow: auto;
+}
+  
 .up{
     width: 100%;
     height: 80px;
@@ -30,6 +45,10 @@
     display: flex;
     /* border: 2px solid red; */
 }
+.prdiv{
+    width: 96%;
+    display: flex;
+}
 
 .midleft{
     height: 100%;
@@ -45,6 +64,9 @@
     height: 210px;
     width: 100%;
     /* background-color: rgb(49, 52, 52); */
+}
+.prdiv2{
+    display: flex;
 }
 
 .prdiv2 label{
@@ -173,7 +195,7 @@ textarea::placeholder{
 
   @media screen and (max-width: 500px) {
     .admin{
-        height: 1500px;
+        height: 1200px;
         width: 100%;
         /* background-color: aqua; */
     }
@@ -208,8 +230,8 @@ textarea::placeholder{
     }
     .newcolect{
         /* margin: 10px 33px; */
-        width: 100%; 
-        margin-top: 67px;
+        width: 93%; 
+        /* margin-top: 67px; */
         margin-left: 30px;
     }
     .down{
