--- a/src/components/Pages/Homepage/Payment.css
+++ b/src/components/Pages/Homepage/Payment.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 .container{
     height: 1000px;
     width: 100%;
@@ -6,6 +8,22 @@
 .uppay{
   text-align: center;
   margin-top: 20px;
+  font-size: 16px;
+}
+input::placeholder{
+  font-size: 16px;
+}
+select{
+  font-size: 16px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #DFDFDF;
+  border-radius: 4px;
+  height: 6vh;
+}
+.uppay h2{
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
 }
 .section{
     /* width: 80%; */
@@ -51,12 +69,15 @@
     justify-content: center;
 }
 .aa{
-    height: 107px;
+    height: 77px;
     width: 100%;
     /* background-color: antiquewhite */
     display: flex;
-    /* margin-bottom: 15px; */
+    margin-bottom: 15px;
     flex-direction: column;
+}
+.hh{
+  display: block;
 }
 .hhhh{
     padding: 5px 45px;
@@ -85,8 +106,8 @@
     display: flex;
     margin-left: 50px;
 }
-
 #vehicle1{
+  display: block;
     height: 15px;
     margin: 7px 0px;
     width: 15px;
@@ -108,6 +129,15 @@
     width: 90%;
     /* border: 2px solid black; */
     margin: auto;
+}
+label{
+  display: none;
+}
+.ship h3{
+  font-size: 16px;
+  font-weight: 800;
+  font-family: 'Inter', sans-serif;
+  margin: 16px 10px;
 }
 
 form {
@@ -141,30 +171,33 @@ form {
   }
   
   label {
-    display: block;
+    /* display: block; */
     font-weight: bold;
     margin-bottom: 5px;
   }
   
-  input,
-  select {
+  input {
     width: 100%;
     padding: 10px;
+    /* font-size: 20px; */
     border: 1px solid #DFDFDF;
     border-radius: 4px;
+    height: 6vh;
   }
   
   .btnp {
     background-color: black;
     color: white;
+    letter-spacing: 2px;
+    text-transform: uppercase;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
-    width: 40%;
+    width: 56%;
     align-items: end;
-    margin-left: 290px;
-    font-size:17px;
+    margin-left: 216px;
+    font-size:15px;
   }
   
   .btnp:hover {
@@ -181,8 +214,9 @@ form {
     width: 90%;
     /* border: 2px solid     black; */
     display: block;
-    margin: 40px auto;
+    /* margin: 40px auto; */
     overflow: auto;
+    margin-top: 20px;
 }
 .divpay{
     height: 105px;
@@ -194,14 +228,33 @@ form {
     width: 100%;
 }
 .imgpay{
-      margin-left: 20px;
-      height: 100px;
-      width: 100px;
+  margin-left: 20px;
+  height: 91px;
+  width: 95px;
+  border-radius: 14px;
     }
     
     .divpay h3{
-        margin-top: 30px;
-        margin-left: 30px;
+      margin-top: 30px;
+      margin-left: 16px;
+      font-size: 16px;
+      font-weight: 800;
+      font-family: 'Inter', sans-serif;
+  }
+    .divpay h2{
+      font-family: 'Inter', sans-serif;
+      margin-top: 30px;
+      margin-left: 50px;
+      font-size: 15px;
+      /* align-items: end; */
+      font-weight: 300;
+      color: black;
+      /* text-align: end; */
+      /* font-size: 19px; */
+  }
+  .Totalpay{
+    width: 84%;
+    font-size: 19px;
   }
   .Checkpay{
     align-items: end;
@@ -240,33 +293,69 @@ form {
       flex-direction: column;
       width: 100%;
       margin: 0px 0px;
-      height: 1350px;
+      height: 1235px;
+    }
+    .divpay h3{
+      font-size: 15px;
+      width: 32%;
+    }
+    .Totalpay{
+      width: 100%;
     }
     .cardpayment{
       width: 100%;
+      height: 61%;
     }
     .rightp{
       padding: 1px 12px;
       width: 100%;
+      /* font-size: 20px; */
     }
     .ship{
-      height: 600px;
+      height: 639px;
+      width: 95%;
+      /* margin: 0px 0px; */
     }
     .leftp{
       width: 100%;
     }
+      
+  input,
+  select {
+    font-size: 17px;
+  }
+
     .hhhh{
-      padding: 1px 30px;
+      padding: 1px 16px;
+      font-size: 25px;
+    }
+    .aa{
+      /* height: 40vh; */
     }
     .aa input{
-      margin: 0px 30px;
-      width: 85%;
+      margin: 0px 14px;
+      width: 92%;
+    }
+    .shiphead{
+      margin: 10px 0px;
+      font-size: 23px;
+    }
+    .hh{
+      font-size: 18px;
+    }
+    input::placeholder{
+      font-size: 17px;
     }
     .ip{
-      margin-left: 30px;
+      margin-left: 16px;
     }
     form{
-      width: 96%;
+      width: 100%;
+      margin-left: 0px;
+    }
+    label{
+      font-size: 20px;
+      margin: 0px 0px;
     }
     .btnp{
       margin-left: 0px;
@@ -275,5 +364,10 @@ form {
     .cont{
       overflow: initial;
       width: 100%;
+      font-size: 20px;
+      /* margin: 0px 0px; */
+    }
+    .Checkpay{
+      font-size: 23px;
     }
   }
