--- a/src/components/Pages/Homepage/cart.css
+++ b/src/components/Pages/Homepage/cart.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 .cart-container1 {
     width: 100%;
     height: 690px;
@@ -6,7 +8,23 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     /* overflow: hidden; */
   }
-  
+  .textcart{
+    font-weight: 900;
+    font-size: 26px;
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'Heebo';
+  }
+
+  .rtbtn{
+    height: 40px;
+    width: 170px;
+    border-radius: 20px;
+    border: none;
+    font-size: 20px;
+    background-color: #000000;
+    color: #ccc;
+  }
+
   .slider{
     height: 570px;
     /* overflow: auto; */
@@ -58,6 +76,8 @@
   margin-top: 10px;
   /* background-color: #000000; */
   width: 70%;
+  font-family: 'Inter', sans-serif;
+  font-size: 20px;
 }
 .two{
   height: 100%;
@@ -72,7 +92,7 @@
 .three p{
   margin: 40px;
   text-align: end;
-  font-size: 20px;
+  font-size: 25px;
 }
 span{
   color: rgb(82, 78, 78);
@@ -139,6 +159,8 @@ span{
 }
 .chk{
   margin-right: 200px;
+  font-size: 20px;
+  text-align: end;
 }
 .chbtn{
   height: 40px;
@@ -265,6 +287,31 @@ span{
   .card1{
     margin: 0px 0px;
   }
+  .chbtn{
+    height:45px;
+    width: 160px;
+    background-color: black;
+    color: #fff;
+    cursor: pointer;
+    font-size: 26px;
+    border: none;
+
+  }
+  .textcart{
+    font-weight: 900;
+    font-size: 30px;
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'Heebo';
+  }
+  .rtbtn{
+    height: 50px;
+    width: 190px;
+    border-radius: 20px;
+    border: none;
+    font-size: 25px;
+    background-color: #000000;
+    color: #ccc;
+  }
   .one1{
     width: 100%;
     padding: 0px 0px;
@@ -281,10 +328,19 @@ span{
   }
   .slider{
     height: 550px;
+    font-size: 18px;
     /* overflow: auto; */
     width: 100%;
     margin: 40px auto;
     /* border: 2px solid black; */
+  }
+  .one2{
+    margin-left: 17px;
+    margin-top: 10px;
+    font-size:20px;
+    font-family: 'Inter', sans-serif;
+    /* background-color: #000000; */
+    width: 70%;
   }
   
   .hd{
@@ -317,5 +373,14 @@ span{
   }
   .chk{
     margin-right: 1%;
+    font-size: 24px;
+    text-align: end;
+    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: 'Inter', sans-serif; */
   }
+  .chk p{
+    font-size: 25px;
+    margin-bottom: 2px;
+  }
+
 }
