--- a/src/components/Pages/Item.css
+++ b/src/components/Pages/Item.css
@@ -3,3 +3,53 @@
     width: 100%;
     background-color: aqua;
 }
+.flex-container1{
+    display: grid;
+  grid-template-columns: repeat(4, 1fr);
+    /* justify-content: center; */
+    /* margin-left: 20px; */
+}
+.itemdiv1{
+    width: 300px;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.imgg1 {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  /* Additional styles for the image */
+}
+
+.text-store1 {
+  margin-top: 10px;
+  /* Additional styles for the text content */
+}
+.headstore1{
+        font-size: 20px;
+    font-weight: 700;
+}
+.headstore2{
+    font-size: 15px;
+}
+
+@media screen and (max-width: 500px) {
+    .flex-container1{
+        grid-template-columns: repeat(2, 1fr);
+}
+.headstore1{
+        font-size: 26px;
+    font-weight: 700;
+}
+.headstore2{
+    font-size: 25px;
+}
+.itemdiv1{
+    width: auto;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+}
