--- a/src/components/Pages/admincollect.css
+++ b/src/components/Pages/admincollect.css
@@ -42,16 +42,14 @@
     display: block;
 }
 .deleteadmin{
-    position: relative;
-    top: 8px;
-    left: 23%;
+    /* position: relative; */
     height: 30px;
     width: 60px;
     font-size: 16px;    
     border: none;
+    color: red;
 }
 .deleteadmin:hover{
-    color: red;
     cursor: pointer;
 }
 .addbtnpage{
