--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -18,6 +18,7 @@
   display: none;
 }
 .allnav{
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   display: flex;
 }
 .sidebar{
@@ -129,7 +130,7 @@
     height: 100vh;
     width: 250px;
     background-color: #ffffff;
-    box-shadow: 1px 1px 10px 1px white;
+    /* box-shadow: 1px 1px 10px 1px white; */
     transition: all 0.3s ease-in-out;
   }
   .nav{
@@ -138,6 +139,7 @@
 
   .navbar-link2{
     display: block;
+    margin-left: 20px;
   }
 
   .navbar-item{
@@ -153,7 +155,7 @@
     align-items: unset;
   }
   .navbar-item1{
-    margin-left: 0px;
+    margin-left: 9px;
   }
 
   .sidebar.open {
@@ -171,11 +173,11 @@
     color: #555555;
     display: none;
     width: 100%;
-    /* position: relative; */
+    position: initial;
   }
   .dropdown-menu li{
     margin: 20px 0px;
-    font-size: 20px;
+    font-size: 25px;
     cursor: pointer;
     font-weight: 400;
   }
@@ -204,7 +206,7 @@
 
   .toggle-button {
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 10px;
     height: 40px;
     width: 40px;
